force-app/main/default/objects/AutomatedSurvey__c/AutomatedSurvey__c.object-meta.xml
<CustomObject>
    <label>Automated Survey</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Automated Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>