force-app/main/default/objects/AutomatedSurvey__c/fields/ACDF__c.field-meta.xml
<CustomField>
    <fullName>ACDF__c</fullName>
    <formula>DateSent__c - Contact__r.Account.Closed_Contract_Date__c</formula>
    <label>Account Created Date Figure</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>