force-app/main/default/objects/AutomatedSurvey__c/fields/Honeymooner__c.field-meta.xml
<CustomField>
    <fullName>Honeymooner__c</fullName>
    <formula>DateResponded__c &lt; Contact__r.Account.First_POS_Start_Date_2__c+220</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Honeymooner</label>
    <type>Checkbox</type>
</CustomField>