force-app/main/default/objects/AutomatedSurvey__c/fields/IsMini__c.field-meta.xml
<CustomField>
    <fullName>IsMini__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mini</label>
    <type>Checkbox</type>
</CustomField>