force-app/main/default/objects/AutomatedSurvey__c/fields/NPS_Calculator__c.field-meta.xml
<CustomField>
    <fullName>NPS_Calculator__c</fullName>
    <formula>CASE(NPS__c, 
10, 100,
9, 100,
8, 0,
7, 0,
6, -100,
5, -100,
4, -100,
3, -100,
2, -100,
1, -100,
0, -100,
null)</formula>
    <label>NPS Calculator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>