force-app/main/default/objects/AutomatedSurvey__c/fields/NPSCategory__c.field-meta.xml
<CustomField>
    <fullName>NPSCategory__c</fullName>
    <formula>CASE(NPS__c, 10, &quot;P&quot;, 9, &quot;P&quot;, 8, &quot;N&quot;, 7, &quot;N&quot;, 6, &quot;D&quot;, 5, &quot;D&quot;, 4, &quot;D&quot;, 3, &quot;D&quot;, 2, &quot;D&quot;, 1, &quot;D&quot;, 0, &quot;D&quot;, null)</formula>
    <label>NPS Category</label>
    <type>Text</type>
</CustomField>