force-app/main/default/objects/AutomatedSurvey__c/fields/NPSType__c.field-meta.xml
<CustomField>
    <fullName>NPSType__c</fullName>
    <label>NPS Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>