force-app/main/default/objects/AutomatedSurvey__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <label>Promoter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>