force-app/main/default/objects/AutomatedSurvey__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>