force-app/main/default/objects/AutomatedSurvey__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>DateResponded__c</columns>
    <columns>DateSent__c</columns>
    <columns>NPS__c</columns>
    <filterScope>Mine</filterScope>
    <label>all</label>
</ListView>